--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,8 +1,13 @@
 .root {
   position: relative;
-  left: -120px;
+  left: 0px;
 }
 
+.languejAny {
+  margin: 0;
+  padding: 0;
+  font-weight: bolder;
+}
 .input {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 12px 20px;
